--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             Code on
             <a
                 target="_blank"
-                href="https://github.com/CihadCengiz"
+                href="https://github.com/CihadCengiz/jsprojects"
                 >Github</a
             >
         </footer>
