--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a target="_blank" href="movie-app/index.html">Movies App</a>
             </li>
             <li>
-                <a target="_blank" href="drawing-app/index.html">Drawing App</a>
+                <a target="_blank" href="github-profiles/index.html">Github Profiles</a>
             </li>
             <li>
                 <a target="_blank" href="password-generator/index.html"
